deploy/pilotdocs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pilotdocs
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: pilotdocs
